objects/Nebula__Log__c.object
<CustomObject>
    <fields>
        <fullName>Nebula__ApiReleaseNumber__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The release number for the org&apos;s instance - determined by making a callout to status.salesforce.com</description>
        <inlineHelpText>The release number for the org&apos;s instance - determined by making a callout to status.salesforce.com</inlineHelpText>
        <label>API Release Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ApiReleaseVersion__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The release version for the org&apos;s instance - determined by making a callout to status.salesforce.com</description>
        <inlineHelpText>The release version for the org&apos;s instance - determined by making a callout to status.salesforce.com</inlineHelpText>
        <label>API Release Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ApiVersion__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The Salesforce release (API version) of the environment</description>
        <inlineHelpText>The Salesforce release (API version) of the environment</inlineHelpText>
        <label>API Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>v56.0</fullName>
                    <label>v56.0 - Winter &apos;23 Release</label>
                </value>
                <value>
                    <fullName>v55.0</fullName>
                    <label>v55.0 - Summer &apos;22 Release</label>
                </value>
                <value>
                    <fullName>v54.0</fullName>
                    <label>v54.0 - Spring &apos;22 Release</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__ClosedBy__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ClosedLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nebula__ClosedDate__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nebula__Comments__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__EndTime__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>End Time</label>
        <summarizedField>Nebula__LogEntry__c.Nebula__Timestamp__c</summarizedField>
        <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nebula__IsClosed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__IsResolved__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>Is Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__Issue__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Code Issue</fullName>
                </value>
                <value>
                    <fullName>Config Issue</fullName>
                </value>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
                <value>
                    <fullName>Integration Issue</fullName>
                </value>
                <value>
                    <fullName>No Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__Locale__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LogEntriesSummary__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__TotalLogEntries__c) + &apos; total entries&apos;
+ IF(
    Nebula__TotalERRORLogEntries__c = 0,
    &apos;&apos;,
    &apos;, &apos; + TEXT(Nebula__TotalERRORLogEntries__c) + &apos; error(s)&apos;
)
+ IF(
    Nebula__TotalWARNLogEntries__c = 0,
    &apos;&apos;,
    &apos;, &apos; + TEXT(Nebula__TotalWARNLogEntries__c) + &apos; warning(s)&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LogPurgeAction__c</fullName>
        <complianceGroup>None</complianceGroup>
        <inlineHelpText>Used by the batch job LogBatchPurger, this indicates the action that should be taken for a Log__c record when LogRetentionDate__c &lt; TODAY. Out of the box, only &apos;Delete&apos; is used by Logger, but plugins can add &amp; use new values.</inlineHelpText>
        <label>Log Purge Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__LogRetentionDate__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The date that this log can be automatically deleted by the batch job LogBatchPurger.

It defaults to 2 weeks after creation (configurable in Logger Settings), but the date can be set manually or via automation if certain logs need to be kept longer/indefinitely.</description>
        <inlineHelpText>The date that this log can be automatically deleted by the batch job LogBatchPurger.</inlineHelpText>
        <label>Log Retention Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggedByUsernameLink__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <formula>IF(
    ISBLANK(Nebula__LoggedBy__c),
    &apos;Anonymous&apos;,
    HYPERLINK(
        Nebula__LoggedBy__c,
        IF(
            ISPICKVAL(Nebula__UserType__c, &apos;AutomatedProcess&apos;),
            TRIM(Nebula__LoggedBy__r.FirstName + &apos; &apos; + Nebula__LoggedBy__r.LastName),
            Nebula__LoggedByUsername__c
        ),
        &apos;_top&apos;
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggedByUsername__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggedBy__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggerVersionNumber__c</fullName>
        <complianceGroup>None</complianceGroup>
        <externalId>true</externalId>
        <label>Logger Version Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoginApplication__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Login Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoginBrowser__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Login Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoginDomain__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>DEPRECATED: Login Domain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Nebula__LoginHistoryId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Login History ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoginPlatform__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Login Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoginType__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Login Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Remote Access 2.0</fullName>
                </value>
                <value>
                    <fullName>SAML Idp Initiated SSO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__LogoutUrl__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Logout URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Nebula__MaxLogEntryLoggingLevelOrdinal__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The highest logging level ordinal of any related log entries</description>
        <inlineHelpText>The highest logging level ordinal of any related log entries</inlineHelpText>
        <label>Max Log Entry Logging Level Ordinal</label>
        <summarizedField>Nebula__LogEntry__c.Nebula__LoggingLevelOrdinal__c</summarizedField>
        <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nebula__NetworkId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <description>The Network ID of the Community user&apos;s site. Set with Network.getNetworkId()</description>
        <externalId>true</externalId>
        <inlineHelpText>The Network ID of the user&apos;s Community site.</inlineHelpText>
        <label>Site Network ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__NetworkLoginUrl__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Site Login URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Nebula__NetworkLogoutUrl__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Site Logout URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Nebula__NetworkName__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <description>The name of the user&apos;s Community site (based on NetworkId).</description>
        <inlineHelpText>The name of the user&apos;s Community site (based on NetworkId).</inlineHelpText>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__NetworkSelfRegistrationUrl__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Site Self Registration URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Nebula__NetworkUrlPathPrefix__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <description>The UrlPathPrefix is a unique string at the end of the URL for this community. For example, in the community URL CommunitiesSubdomainName.force.com/customers, customers is the UrlPathPrefix.</description>
        <inlineHelpText>The UrlPathPrefix is a unique string at the end of the URL for this community. For example, in the community URL CommunitiesSubdomainName.force.com/customers, customers is the UrlPathPrefix.</inlineHelpText>
        <label>Site URL Path Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationDomainUrl__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The value returned from Url..getOrgDomainUrl()</description>
        <inlineHelpText>The value returned from Url..getOrgDomainUrl()</inlineHelpText>
        <label>Organization Domain URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationEnvironmentType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Environment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Scratch Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationId__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Organization ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationInstanceName__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Instance Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationInstanceReleaseCycle__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>DEPRECATED: Instance Release Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preview Instance</fullName>
                </value>
                <value>
                    <fullName>Non-Preview Instance</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationName__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationNamespacePrefix__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Organization Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Team Edition</fullName>
                </value>
                <value>
                    <fullName>Professional Edition</fullName>
                </value>
                <value>
                    <fullName>Enterprise Edition</fullName>
                </value>
                <value>
                    <fullName>Developer Edition</fullName>
                </value>
                <value>
                    <fullName>Personal Edition</fullName>
                </value>
                <value>
                    <fullName>Unlimited Edition</fullName>
                </value>
                <value>
                    <fullName>Contact Manager Edition</fullName>
                </value>
                <value>
                    <fullName>Base Edition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__ParentLogLink__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <formula>IF(
    NOT(ISBLANK(Nebula__ParentLog__c)),
    HYPERLINK(Nebula__ParentLog__c, Nebula__ParentLog__r.Name + &apos; - &apos; + Nebula__ParentLogTransactionId__c),
    Nebula__ParentLogTransactionId__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Log</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ParentLogTransactionId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Parent Log Transaction ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ParentLog__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The log from the original transaction that initiated a child log - for example, batch jobs have start, execute and finish methods. All 3 are considered separate transactions. By using the parent log, logs from all 3 transactions can be linked together.</description>
        <inlineHelpText>The log from the original transaction that initiated a child log - for example, batch jobs have start, execute and finish methods. All 3 are considered separate transactions. By using the parent log, logs from all 3 transactions can be linked together.</inlineHelpText>
        <label>Parent Log</label>
        <referenceTo>Nebula__Log__c</referenceTo>
        <relationshipLabel>Related Logs</relationshipLabel>
        <relationshipName>ChildLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nebula__Priority__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <color>#FF6666</color>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <color>#FFCC66</color>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <color>#66FF99</color>
                    <default>true</default>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__ProfileId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Profile ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ProfileLink__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <formula>HYPERLINK(&apos;/&apos; + Nebula__ProfileId__c, Nebula__ProfileName__c, &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ProfileName__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__Scenario__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <externalId>true</externalId>
        <label>Scenario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__SessionId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Session ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__SessionSecurityLevel__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Session Security Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LOW</fullName>
                </value>
                <value>
                    <fullName>STANDARD</fullName>
                </value>
                <value>
                    <fullName>HIGH_ASSURANCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__SessionType__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aura</fullName>
                </value>
                <value>
                    <fullName>Oauth2</fullName>
                </value>
                <value>
                    <fullName>UI</fullName>
                </value>
                <value>
                    <fullName>Visualforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__SourceIp__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Source IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__StartTime__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Start Time</label>
        <summarizedField>Nebula__LogEntry__c.Nebula__Timestamp__c</summarizedField>
        <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nebula__Status__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ignored</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__SystemModeSummary__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>&apos;API.&apos; +  TEXT(Nebula__ApiVersion__c) + &apos;.&apos; + TEXT(Nebula__SystemMode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__SystemMode__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>System Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANONYMOUS</fullName>
                </value>
                <value>
                    <fullName>AURA</fullName>
                </value>
                <value>
                    <fullName>BATCH_ACS</fullName>
                </value>
                <value>
                    <fullName>BATCH_APEX</fullName>
                </value>
                <value>
                    <fullName>BATCH_CHUNK_PARALLEL</fullName>
                </value>
                <value>
                    <fullName>BATCH_CHUNK_SERIAL</fullName>
                </value>
                <value>
                    <fullName>BULK_API</fullName>
                </value>
                <value>
                    <fullName>COMMERCE_INTEGRATION</fullName>
                </value>
                <value>
                    <fullName>DISCOVERABLE_LOGIN</fullName>
                </value>
                <value>
                    <fullName>FUNCTION_CALLBACK</fullName>
                </value>
                <value>
                    <fullName>FUTURE</fullName>
                </value>
                <value>
                    <fullName>INBOUND_EMAIL_SERVIC</fullName>
                </value>
                <value>
                    <fullName>INVOCABLE_ACTION</fullName>
                </value>
                <value>
                    <fullName>IOT</fullName>
                </value>
                <value>
                    <fullName>QUEUEABLE</fullName>
                </value>
                <value>
                    <fullName>QUICK_ACTION</fullName>
                </value>
                <value>
                    <fullName>REMOTE_ACTION</fullName>
                </value>
                <value>
                    <fullName>REST</fullName>
                </value>
                <value>
                    <fullName>RUNTEST_ASYNC</fullName>
                </value>
                <value>
                    <fullName>RUNTEST_DEPLOY</fullName>
                </value>
                <value>
                    <fullName>RUNTEST_SYNC</fullName>
                </value>
                <value>
                    <fullName>SCHEDULED</fullName>
                </value>
                <value>
                    <fullName>SOAP</fullName>
                </value>
                <value>
                    <fullName>SYNCHRONOUS</fullName>
                </value>
                <value>
                    <fullName>TRANSACTION_FINALIZE</fullName>
                </value>
                <value>
                    <fullName>VF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__ThemeDisplayed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Theme Displayed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Theme1</fullName>
                    <label>Obsolete Salesforce Theme</label>
                </value>
                <value>
                    <fullName>Theme2</fullName>
                    <label>Salesforce Classic 2005</label>
                </value>
                <value>
                    <fullName>Theme3</fullName>
                    <label>Salesforce Classic</label>
                </value>
                <value>
                    <fullName>Theme4d</fullName>
                    <label>Lightning Experience</label>
                </value>
                <value>
                    <fullName>Theme4t</fullName>
                    <label>Salesforce Mobile App</label>
                </value>
                <value>
                    <fullName>Theme4u</fullName>
                    <label>Lightning Console</label>
                </value>
                <value>
                    <fullName>PortalDefault</fullName>
                    <label>Customer Portal</label>
                </value>
                <value>
                    <fullName>Webstore</fullName>
                    <label>AppExchange</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__TimeZoneId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Time Zone ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__TimeZoneName__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Time Zone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__TotalDEBUGLogEntries__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The total number of log entries with logging level == &apos;DEBUG&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;DEBUG&apos;</inlineHelpText>
        <label>Total DEBUG Entries</label>
        <summaryFilterItems>
            <field>Nebula__LogEntry__c.Nebula__LoggingLevel__c</field>
            <operation>equals</operation>
            <value>DEBUG</value>
        </summaryFilterItems>
        <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nebula__TotalERRORLogEntries__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The total number of log entries with logging level == &apos;ERROR&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;ERROR&apos;</inlineHelpText>
        <label>Total ERROR Entries</label>
        <summaryFilterItems>
            <field>Nebula__LogEntry__c.Nebula__LoggingLevel__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </summaryFilterItems>
        <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nebula__TotalFINELogEntries__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The total number of log entries with logging level == &apos;FINE&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;FINE&apos;</inlineHelpText>
        <label>Total FINE Entries</label>
        <summaryFilterItems>
            <field>Nebula__LogEntry__c.Nebula__LoggingLevel__c</field>
            <operation>equals</operation>
            <value>FINE</value>
        </summaryFilterItems>
        <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nebula__TotalFINERLogEntries__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The total number of log entries with logging level == &apos;FINER&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;FINER&apos;</inlineHelpText>
        <label>Total FINER Entries</label>
        <summaryFilterItems>
            <field>Nebula__LogEntry__c.Nebula__LoggingLevel__c</field>
            <operation>equals</operation>
            <value>FINER</value>
        </summaryFilterItems>
        <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nebula__TotalFINESTLogEntries__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The total number of log entries with logging level == &apos;FINEST&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;FINEST&apos;</inlineHelpText>
        <label>Total FINEST Entries</label>
        <summaryFilterItems>
            <field>Nebula__LogEntry__c.Nebula__LoggingLevel__c</field>
            <operation>equals</operation>
            <value>FINEST</value>
        </summaryFilterItems>
        <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nebula__TotalINFOLogEntries__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The total number of log entries with logging level == &apos;INFO&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;INFO&apos;</inlineHelpText>
        <label>Total INFO Entries</label>
        <summaryFilterItems>
            <field>Nebula__LogEntry__c.Nebula__LoggingLevel__c</field>
            <operation>equals</operation>
            <value>INFO</value>
        </summaryFilterItems>
        <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nebula__TotalLimitsCpuTimeUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Total CPU</label>
        <summarizedField>Nebula__LogEntry__c.Nebula__LimitsCpuTimeUsed__c</summarizedField>
        <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nebula__TotalLogEntries__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>Nebula__TotalERRORLogEntries__c
+ Nebula__TotalWARNLogEntries__c
+ Nebula__TotalINFOLogEntries__c
+ Nebula__TotalDEBUGLogEntries__c
+ Nebula__TotalFINELogEntries__c
+ Nebula__TotalFINERLogEntries__c
+ Nebula__TotalFINESTLogEntries__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Entries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__TotalWARNLogEntries__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The total number of log entries with logging level == &apos;WARN&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;WARN&apos;</inlineHelpText>
        <label>Total WARN Entries</label>
        <summaryFilterItems>
            <field>Nebula__LogEntry__c.Nebula__LoggingLevel__c</field>
            <operation>equals</operation>
            <value>WARN</value>
        </summaryFilterItems>
        <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nebula__TransactionId__c</fullName>
        <complianceGroup>None</complianceGroup>
        <externalId>true</externalId>
        <label>Transaction ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>